# gdrigsystem

./: .gitignore  .gitmodules  README.md  SConstruct  build_all.sh  build_extension.sh  build_godot-cpp.sh  build_librigsystem_so.sh  gdrigsystem.gdextension  godot-cpp_enable_cpp20.patch  godot-cpp_enable_cpp2b.patch
src/: gdrigsystem.cpp  gdrigsystem.hpp  register_types.cpp  register_types.h
src/rigsystem_lib/: meson.build
src/rigsystem_lib/src/: rigsystem_common.cpp  rigsystem_common.hpp  rigsystem_vec3.hpp
src/rigsystem_lib/src_app/: app_perf_test.cpp  app_test.cpp  rig_def_test_00.yaml
src/rigsystem_lib/subprojects/: ascii-graphics.wrap  yaml-cpp.wrap
